Solve without changing the temp dir structure by fixing cleanup
Create a static file utils method for recursively deleting a target dir as well as any empty anscestors.